--- a/evento.html
+++ b/evento.html
@@ -23,13 +23,14 @@
 </head>
 <body>
 
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="index.html">WebSport</a>
     </div>
     <button type="button" class="btn btn btn-default" data-toggle="collapse" data-target="#demo"><span class="glyphicon glyphicon-align-center"></span>
     </button>
+  </div>
 </nav>
 <div class="container-fluid">
       <div class="row ">
