--- a/futbol-evento.html
+++ b/futbol-evento.html
@@ -23,13 +23,14 @@
 </head>
 <body>
 
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="index.html">WebSport</a>
     </div>
     <button type="button" class="btn btn btn-default" data-toggle="collapse" data-target="#demo"><span class="glyphicon glyphicon-align-center"></span>
     </button>
+  </div>
 </nav>
 <div class="container-fluid">
       <div class="row ">
@@ -72,7 +73,6 @@
             <div class="row">
               <div class="col-md-3">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31897.039328328632!2d-79.91399686287322!3d-2.10345269846666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d12b795d5e857%3A0x88abfac5acffb211!2sParque+Samanes!5e0!3m2!1ses-419!2sec!4v1510532196295" width="200" height="200" frameborder="0"  allowfullscreen></iframe>
-            
               </div>
             </div>
 
