Acualizacion del css y del nav de las paginas

--- a/deporte.html
+++ b/deporte.html
@@ -23,34 +23,40 @@
 </head>
 <body>
 
-<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="index.html">WebSport</a>
-    </div>
-    <button type="button" class="btn btn btn-default" data-toggle="collapse" data-target="#demo"><span class="glyphicon glyphicon-align-center"></span>
-    </button>
-  </div>
-</nav>
-<div class="container-fluid">
-      <div class="row ">
-       <div id="demo" class="col-md-2 sidebar collapse in">
-          <ul class="nav nav-pills nav-stacked">
-            <img src="img/logo.png" class="logo" alert="logo WebSport">
-            <form action="#" method="get" class="sidebar-form">
-              <div class="input-group">
-                <input type="text" name="q" class="form-control" placeholder="Search..."/>
-               <span class="input-group-btn">
-                  <button type='submit' name='seach' id='search-btn' class="btn btn-flat"><span class="glyphicon glyphicon-search"></span> </button>
-                </span>
-              </div>
-            </form>
-            <li><a href="index.html">panel</a></li>
+ <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          
+          <a class="navbar-brand" href="#">WebSport</a>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="true" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+      </div>
+    </nav>
 
+<div class="container-fluid">
+    <div class="row">
+      <div id="navbar" class="col-md-2 col-2 navbar-collapse sidebar collapse ">
+        <ul class="nav nav-pills nav-stacked">
+          <img src="img/logo.png" class="logo" alert="logo WebSport">
+           <form action="#" method="get" class="sidebar-form">
+                <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search for..." aria-label="Search for...">
+            <span class="input-group-btn">
+             <button type='submit' name='seach' id='search-btn' class="btn btn-flat"><span class="glyphicon glyphicon-search"></span> </button>
+            </span>
+          </div>
+            </form>
+            <li><a href="index.html">Panel</a></li>
             <li class="active"><a href="deporte.html">Deportes</a></li>
             <li><a href="evento.html">Eventos</a></li>
-          </ul>
-        </div>
+            
+        </ul>
+      </div>
 
         <div class="col-md-10 col-md-offset-2 main">
           <div class="row">
