--- a/deporte.html
+++ b/deporte.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Pagina oficial de Sweet  &amp Coffe">
-  <meta name="author" content="Wong Hugo">
+  <meta name="description" content="Pagina de WebSport">
+  <meta name="author" content="Wong Hugo, Carlos Veintemilla">
   <link rel="icon" href="img/favicon.ico">
 
 
@@ -47,25 +48,14 @@
 <div class="container-fluid">
         <div class="col-md-12 col-12 main ">
           <div class="row">
+
           <div class="col-md-3">
-
             <div class="container-fluid">
-              
               <a href="futbol.html">
+                <p>Futbol</p>
+                <div class="fluid">
                 <img src="img/futbol.jpg" alt="Chania" >
-                 <p>
-                    Futbol
-                  </p>
-              </a>
-            </div>
-         </div>
-         <div class="col-md-3">
-           <div class="container-fluid">
-              <a href="#">
-                <img src="img/tenis.jpg" alt="Chania" >
-                  <p>
-                    Tenis
-                  </p>
+                 </div>
               </a>
             </div>
          </div>
@@ -73,20 +63,36 @@
          <div class="col-md-3">
            <div class="container-fluid">
               <a href="#">
-                <img src="img/basquetbol.jpg" alt="Chania" >
-                  <p>
+                 <p>Tenis</p>
+                 <div class="fluid">
+                <img src="img/tenis.jpg" alt="Chania" >
+              </div>
+                 
+              </a>
+            </div>
+         </div>
+
+         <div class="col-md-3">
+           <div class="container-fluid">
+              <a href="#">
+                <p>
                     Basquetbol
                   </p>
+                   <div class="fluid">
+                <img src="img/basquetbol.jpg" alt="Chania" >
+                  </div>
               </a>
             </div>
          </div>
          <div class="col-md-3">
            <div class="container-fluid">
               <a href="#">
-                <img src="img/tiro-con-arco.jpg" alt="Chania" >
-                  <p>
+                 <p>
                     Tiro con arco
                   </p>
+                   <div class="fluid">
+                <img src="img/tiro-con-arco.jpg" alt="Chania" >
+                 </div>
               </a>
             </div>
          </div>
