--- a/futbol-evento-lista.html
+++ b/futbol-evento-lista.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Pagina oficial de Sweet  &amp Coffe">
-  <meta name="author" content="Wong Hugo">
+  <meta name="description" content="Pagina de WebSport">
+  <meta name="author" content="Wong Hugo, Carlos Veintemilla">
   <link rel="icon" href="img/favicon.ico">
 
 
@@ -58,15 +59,13 @@
                </nav>
                 </section>
                 <div class="row">
-          <div class="col-md-3">
-
-            <div class="container-fluid">
-              
+         <div class="col-md-3">
+            <div class="container-fluid"> 
               <a href="futbol-evento.html">
+                 <p>Futbol Zaragoza</p>
+                <div class="fluid">
                 <img src="img/evento-futbol.jpg" alt="Chania" >
-                 <p>
-                    <h3>Futbol Zaragoza</h3>
-                  </p>
+              </div>
               </a>
             </div>
          </div>
