--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Pagina oficial de Sweet  &amp Coffe">
-  <meta name="author" content="Wong Hugo">
+  <meta name="description" content="Pagina de WebSport">
+  <meta name="author" content="Wong Hugo, Carlos Veintemilla">
   <link rel="icon" href="img/favicon.ico">
 
 
@@ -43,7 +44,7 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-    
+
 <div class="container-fluid">
         <div class="col-md-12 col-12 main ">
           <div class="col-md-6 col-6">
