--- a/evento.html
+++ b/evento.html
@@ -50,7 +50,6 @@
         <div class="col-md-12 col-12 main ">
           <div class="row">
           <div class="col-md-3">
-
             <div class="container-fluid"> 
               <a href="futbol-evento.html">
                  <p>Futbol Zaragoza</p>
@@ -64,7 +63,7 @@
          <div class="col-md-3">
            <div class="container-fluid">
               <a href="#">
- <p>Campeonato Tenis</p>
+                <p>Campeonato Tenis</p>
                 <div class="fluid">
                 <img src="img/evento-tenis.jpg" alt="Chania" >
               </div>
@@ -76,9 +75,7 @@
          <div class="col-md-3">
            <div class="container-fluid">
               <a href="#">
-<p>
-                    Torneo Basquetbol
-                  </p>
+                <p>Torneo Basquetbol</p>
                 <div class="fluid">
                 <img src="img/evento-basquetbol.jpg" alt="Chania" >
               </div>
@@ -89,9 +86,7 @@
          <div class="col-md-3">
            <div class="container-fluid">
               <a href="#">
-<p>
-                  Torneo Polideportiro
-                  </p>
+                <p>Torneo Polideportiro</p>
                 <div class="fluid">
                 <img src="img/evento-tiro-con-arco.jpg" alt="Chania" >
                 </div>
