--- a/futbol-evento.html
+++ b/futbol-evento.html
@@ -60,8 +60,195 @@
         <div class="container-fluid">
             <h2>Campeonato Futbol Zaragoza </h2>
           <div class="col-md-9">
-          <p>El fútbol es un deporte de equipo jugado entre dos conjuntos de once jugadores cada uno y algunos árbitros que se ocupan de que las normas se cumplan correctamente. Es ampliamente considerado el deporte más popular del mundo, pues lo practican unas 270 millones de personas.4​ También se le conoce como futbol asociación o fútbol asociación, nombre derivado de The Football Association, primera federación oficial del mundo en este deporte y que utilizó ese nombre para distinguirlo de otros deportes que incluyen la palabra "futbol" o "fútbol".​ En algunos países de habla inglesa también se le conoce como soccer, abreviatura de association, puesto que el nombre de football en esos países se asocia mayoritariamente a otros deportes con esa denominación.</p>
-          <p>El terreno de juego es rectangular de césped natural o artificial, con una portería o arco a cada lado del campo. Se juega mediante una pelota que se debe desplazar a través del campo con cualquier parte del cuerpo que no sean los brazos o las manos, y mayoritariamente con los pies (de ahí su nombre). El objetivo es introducirla dentro de la portería o arco contrario, acción que se denomina marcar un gol. El equipo que logre más goles al cabo del partido, de una duración de 90 minutos, es el que resulta ganador del encuentro.</p>
+          <p>Este e sun campeonato a nivel local en el que juegan dosce equipos con el unico fin de alzar la tan anheada copa. Los partidos se juegan cada Domingo en las canchas del Parque Samanesen el horadio de 10:00 - 16:00. Estan todos inviados a este evento. </p>
+          <h2>Tabla de posociones </h2>
+         <table class="table table-striped table-inverse">
+              <thead>
+                <tr>
+                  <th><strong>Posiciones</strong></th>
+                  <th><strong>EQUIPO</strong></th>
+                  <th>PTOS</th>
+                  <th>PJ</th>
+                  <th>G</th>
+                  <th>E</th>
+                  <th>P</th>
+                  <th>GF</th>
+                  <th>GC</th>
+                  <th>GD</th>
+                  
+                </tr>
+              </thead>
+              <tbody>
+
+              <tr>
+                <th scope="row">1</th>
+                <td>Emelec</td>
+                <td>39</td>
+                <td>19</td>
+                <td>12</td>
+                <td>3</td>
+                <td>4</td>
+                <td>32</td>
+                <td>15</td>
+                <td>17</td>
+              </tr>
+
+
+              <tr>
+                <th scope="row">2</th>
+                <td>El Nacional</td>
+                <td>34</td>
+                <td>19</td>
+                <td>10</td>
+                <td>4</td>
+                <td>5</td>
+                <td>38</td>
+                <td>22</td>
+                <td>16</td>
+              </tr>
+
+
+              <tr>
+                <th scope="row">3</th>
+                <td>Delfín</td>
+                <td >33</td>
+                <td>19</td>
+                <td>8</td>
+                <td>9</td>
+                <td>2</td>
+                <td>25</td>
+                <td>17</td>
+                <td>8</td>
+              </tr>
+
+
+              <tr>
+                <th scope="row">4</th>
+                <td>Macará</td>
+                <td>32</td>
+                <td>19</td>
+                <td>9</td>
+                <td>5</td>
+                <td>5</td>
+                <td>16</td>
+                <td>26</td>
+                <td>10</td>
+              </tr>
+      
+
+
+              <tr>
+                <th scope="row">5</th>
+                <td>D. Cuenca</td>
+                <td>29</td>
+                <td>19</td>
+                <td>8</td>
+                <td>5</td>
+                <td>6</td>
+                <td>25</td>
+                <td>20</td>
+                <td>5</td>
+              </tr>
+
+
+              <tr>
+                <th scope="row">6</th>
+                <td>Independiente</td>
+                <td>27</td>
+                <td>19</td>
+                <td>7</td>
+                <td>6</td>
+                <td>6</td>
+                <td>35</td>
+                <td>29</td>
+                <td>6</td>
+              </tr>
+
+
+              <tr>
+                <th scope="row">7</th>
+                <td>Barcelona SC</td>
+                <td>20</td>
+                <td>19</td>
+                <td>6</td>
+                <td>8</td>
+                <td>5</td>
+                <td>21</td>
+                <td>19</td>
+                <td>2</td>
+              </tr>
+
+
+              <tr>
+                <th scope="row">8</th>
+                <td>Guayaquil City</td>
+                <td>19</td>
+                <td>19</td>
+                <td>4</td>
+                <td>7</td>
+                <td>8</td>
+                <td>14</td>
+                <td>23</td>
+                <td>-9</td>
+              </tr>
+
+
+              <tr>
+                <th scope="row">9</th>
+                <td>Clan Juvenil</td>
+                <td>16</td>
+                <td>19</td>
+                <td>4</td>
+                <td>4</td>
+                <td>11</td>
+                <td>24</td>
+                <td>45</td>
+                <td>-21</td>
+              </tr>
+
+
+              <tr>
+                <th scope="row">10</th>
+                <td> U. Católica</td>
+                <td>14</td>
+                <td>19</td>
+                <td>4</td>
+                <td>2</td>
+                <td>13</td>
+                <td>20</td>
+                <td>36</td>
+                <td>-16</td>
+              </tr>
+
+
+              <tr>
+                <th scope="row">11</th>
+                <td>Fuerza Amarilla</td>
+                <td>12</td>
+                <td>19</td>
+                <td>4</td>
+                <td>2</td>
+                <td>13</td>
+                <td>14</td>
+                <td>38</td>
+                <td>-24</td>
+              </tr>
+
+                 <tr>
+                <th scope="row">12</th>
+                <td>LDU (Q)</td>
+                <td>17</td>
+                <td>19</td>
+                <td>8</td>
+                <td>5</td>
+                <td>6</td>
+                <td>30</td>
+                <td>24</td>
+                <td>6</td>
+              </tr>
+
+    </tbody>
+  </table>
           </div>
           <div class="col-md-3">
             <div class="row">
