--- a/futbol-evento.html
+++ b/futbol-evento.html
@@ -252,9 +252,11 @@
           </div>
           <div class="col-md-3">
             <div class="row">
+              <div class="nuevo" id="mapa">
               <div class="col-md-3">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31897.039328328632!2d-79.91399686287322!3d-2.10345269846666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d12b795d5e857%3A0x88abfac5acffb211!2sParque+Samanes!5e0!3m2!1ses-419!2sec!4v1510532196295" width="200" height="200" frameborder="0"  allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31897.039328328632!2d-79.91399686287322!3d-2.10345269846666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d12b795d5e857%3A0x88abfac5acffb211!2sParque+Samanes!5e0!3m2!1ses-419!2sec!4v1510532196295" width="250" height="200" frameborder="0"  allowfullscreen></iframe>
               </div>
+            </div>
             </div>
 
             <div class="row">
