--- a/futbol-evento.html
+++ b/futbol-evento.html
@@ -52,8 +52,8 @@
                   <div class="navbar-left">
                     <ul class="nav navbar-nav"><li><a href="futbol.html"><i class="fa fa-apple"></i> Informacion</a></li></ul>
                     <ul class="nav navbar-nav activo"><li><a href="futbol-evento-lista.html">Eventos</a></li></ul> 
-                    <ul class="nav navbar-nav"><li><a href="futbol-contacto.html"> Contacto</a></li></ul> 
-                    <ul class="nav navbar-nav"><li><a href="futbol-contacto.html"> Experiencia</a></li></ul> 
+                    <ul class="nav navbar-nav"><li><a href="index.html"> Contacto</a></li></ul> 
+                    <ul class="nav navbar-nav"><li><a href="index.html"> Experiencia</a></li></ul> 
                  </div>
                </nav>
                 </section>
